# offdict-egui

./: .gitmodules
offdict-egui/: Cargo.toml
offdict-egui/src/: main.rs
