[package]
name = "offdict-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.24.1", path = "../egui/crates/eframe" }
egui = { version = "0.24.1", path = "../egui/crates/egui" }
egui_extras = { version = "0.24.1", path = "../egui/crates/egui_extras" }
env_logger = "0.10.1"
